# arc-autofire

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  autoclick.py  config.py  config_manager.py  detection.py  gui.py  image_paths.py  macro_activator.py  window_detection.py
